create crud and seeds for stock

--- a/backend/.env
+++ b/backend/.env
@@ -13,3 +13,5 @@ DB_PORT=5432
 DB_DATABASE=financiacel
 DB_USERNAME=root
 DB_PASSWORD=1234
+L5_SWAGGER_CONST_HOST=http://localhost:8000
+L5_SWAGGER_GENERATE_ALWAYS=true
