--- a/backend/.env.example
+++ b/backend/.env.example
@@ -13,3 +13,6 @@ DB_PORT=5432
 DB_DATABASE=databasename
 DB_USERNAME=username
 DB_PASSWORD=password
+
+L5_SWAGGER_CONST_HOST=http://localhost:8000
+L5_SWAGGER_GENERATE_ALWAYS=true
